src/test/deca/context/invalid/ext/TAB_match_type2.deca
{
    int[][] a = new float [1][1];
}